mywebapp-kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mywebapp
spec:
  selector:
    app: mywebapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
