mywebapp-kustomize/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mywebapp
spec:
  rules:
    - host: mywebapp.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mywebapp
                port:
                  number: 80
